--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@ function initMap() {
 // ═══════════════════════════════════════════
 const GALLERY_ITEMS = [
   { category:'athens', title:'The Acropolis', sub:'Athens · Day 2', img:'https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/The_Parthenon_in_Athens.jpg/1280px-The_Parthenon_in_Athens.jpg' },
-  { category:'athens', title:'Plaka at Dusk', sub:'Athens · Day 1', img:'https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/Plaka_neighbourhood_of_Athens.jpg/1280px-Plaka_neighbourhood_of_Athens.jpg' },
+  { category:'athens', title:'Plaka at Dusk', sub:'Athens · Day 1', img:'https://www.shutterstock.com/shutterstock/photos/2640161189/display_1500/stock-photo-aerial-view-of-the-illuminated-parthenon-temple-and-the-odeon-of-herode-theatre-at-the-acropolis-of-2640161189.jpg' },
   { category:'athens', title:'Anafiotika', sub:'Athens · Day 2', img:'https://upload.wikimedia.org/wikipedia/commons/thumb/1/14/Anafiotika.jpg/1280px-Anafiotika.jpg' },
   { category:'meteora', title:'Meteora Monasteries', sub:'Kalambaka · Days 4–5', img:'https://upload.wikimedia.org/wikipedia/commons/thumb/a/a8/Meteora_monasteries.jpg/1280px-Meteora_monasteries.jpg' },
   { category:'meteora', title:'The Rock Pillars', sub:'Meteora · Dawn', img:'https://upload.wikimedia.org/wikipedia/commons/thumb/f/f2/Meteora_1.jpg/1280px-Meteora_1.jpg' },
