--- a/index.html
+++ b/index.html
@@ -908,7 +908,8 @@ function renderAudioCards() {
 }
 
 // ─── PASTE YOUR API KEY HERE ──────────────────────────────────────────
-const ANTHROPIC_API_KEY = 'YOUR-API-KEY-HERE';
+const ANTHROPIC_API_KEY = 'const ANTHROPIC_API_KEY = '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';
+';
 // ─────────────────────────────────────────────────────────────────────
 // Get your key at console.anthropic.com → API Keys → Create Key
 // It starts with sk-ant-...
