--- a/index.html
+++ b/index.html
@@ -923,7 +923,7 @@ async function generateGuide(siteId) {
   const previewEl = document.getElementById(`preview-${siteId}`);
 
   // Check key is set
-  if (!ANTHROPIC_API_KEY || ANTHROPIC_API_KEY === 'YOUR-API-KEY-HERE') {
+  if (!ANTHROPIC_API_KEY || ANTHROPIC_API_KEY === 'const ANTHROPIC_API_KEY = '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';') {
     genBtn.textContent = '⚠ Add your API key first — see code comments';
     genBtn.style.color = 'var(--terracotta)';
     return;
