--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-<title>Greece Trip — Greece Road Trip March 2026</title>
+<title>Ελλάδα — Greece Road Trip March 2026</title>
 <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,600;1,300;1,400&family=Cinzel:wght@400;600&family=Jost:wght@300;400;500&display=swap" rel="stylesheet" crossorigin="anonymous">
 
 <style>
@@ -436,7 +436,7 @@
   </div>
   <div class="hero-content">
     <p class="hero-eyebrow">An Odyssey Through Ancient Greece</p>
-    <h1 class="hero-title">Greece Trip</h1>
+    <h1 class="hero-title">ΕΛΛΆΔΑ</h1>
     <p class="hero-subtitle">Athens · Meteora · Delphi · Nafplio</p>
     <p class="hero-dates">7 — 17 March 2026 &nbsp;·&nbsp; 11 Days</p>
   </div>
@@ -453,7 +453,7 @@
 
 <!-- NAV -->
 <nav>
-  <div class="nav-logo">Greece Trip 2026</div>
+  <div class="nav-logo">ΕΛΛΆΔΑ 2026</div>
   <ul class="nav-links">
     <li><a href="#map-section">Map</a></li>
     <li><a href="#weather">Weather</a></li>
@@ -487,7 +487,7 @@
       loading="lazy"
       allowfullscreen
       referrerpolicy="no-referrer-when-downgrade"
-      src="https://www.google.com/maps/embed?pb=!1m46!1m12!1m3!1d3055736!2d22.1!3d38.6!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m31!3e0!4m5!1s0x14a1bd1f067043f1%3A0x2736354576668ddd!2sAthens%2C+Greece!3m2!1d37.9838!2d23.7276!4m5!1s0x135791e6f8e3e3ab%3A0x41e3a51f3f23a0f5!2sMeteora%2C+Greece!3m2!1d39.7217!2d21.6306!4m5!1s0x13578a5b7e5f4f67%3A0x9321b1c4e5f5c7b0!2sLoutra+Thermopylon%2C+Kamena+Vourla%2C+Greece!3m2!1d38.802!2d22.545!4m5!1s0x135798c3e6bfffff%3A0xb07ce2f0c9f4a8b3!2sDelphi%2C+Greece!3m2!1d38.4824!2d22.5011!4m5!1s0x14a01e8b9dd20c75%3A0x400bd2ce2b9c720!2sNafplio%2C+Greece!3m2!1d37.5675!2d22.7966!5e0!3m2!1sen!2snl!4v1740000000000!5m2!1sen!2snl">
+      src="https://www.google.com/maps/embed?pb=!1m52!1m12!1m3!1d3192284.1674116077!2d20.191681839231155!3d38.615182295701636!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m37!3e6!4m5!1s0x14a1bd1f067043f1%3A0x2736354576668ddd!2sAthens%2C%20Greece!3m2!1d37.9838096!2d23.727538799999998!4m5!1s0x13590faee8327f39%3A0x7127add4d8bc32ff!2sMeteora%2C%20Kalampaka%20422%2000%2C%20Greece!3m2!1d39.7217044!2d21.6305896!4m5!1s0x135f5ea855650819%3A0x8c07089922d83717!2sLoutra%20Thermopilon%2C%20350%2009%2C%20Greece!3m2!1d38.7942105!2d22.527475!4m5!1s0x135f796588cfa485%3A0x5fba919f0a8cb15b!2sDelphi%2C%20330%2054%2C%20Greece!3m2!1d38.4800567!2d22.4940617!4m5!1s0x149ffa9cc1517963%3A0x84e450db6d640b8!2sNafplion%2C%20Greece!3m2!1d37.5673173!2d22.8015531!4m5!1s0x14a1f12042e38863%3A0x1d917525acc6e66b!2sArchaeological%20Site%20of%20Sounion%2C%20Lavreotiki%20195%2000%2C%20Greece!3m2!1d37.6501593!2d24.024603499999998!5e0!3m2!1sen!2snl!4v1772022348572!5m2!1sen!2snl">
     </iframe>
   </div>
   <div class="map-stops">
@@ -837,7 +837,7 @@
   </div>
 </section>
 
-<footer>Greece Trip 2026 &nbsp;·&nbsp; Amsterdam → Athens → Meteora → Thermopylae Hot Springs → Delphi → Nafplio → Sounion → Home</footer>
+<footer>ΕΛΛΆΔΑ 2026 &nbsp;·&nbsp; Amsterdam → Athens → Meteora → Thermopylae Hot Springs → Delphi → Nafplio → Sounion → Home</footer>
 
 <script>
 // ═══════════════════════════════════════════
