--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-<title>Ελλάδα — Greece Road Trip March 2026</title>
+<title>Greece Trip — Greece Road Trip March 2026</title>
 <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,600;1,300;1,400&family=Cinzel:wght@400;600&family=Jost:wght@300;400;500&display=swap" rel="stylesheet" crossorigin="anonymous">
 
 <style>
@@ -436,7 +436,7 @@
   </div>
   <div class="hero-content">
     <p class="hero-eyebrow">An Odyssey Through Ancient Greece</p>
-    <h1 class="hero-title">ΕΛΛΆΔΑ</h1>
+    <h1 class="hero-title">Greece Trip</h1>
     <p class="hero-subtitle">Athens · Meteora · Delphi · Nafplio</p>
     <p class="hero-dates">7 — 17 March 2026 &nbsp;·&nbsp; 11 Days</p>
   </div>
@@ -453,7 +453,7 @@
 
 <!-- NAV -->
 <nav>
-  <div class="nav-logo">ΕΛΛΆΔΑ 2026</div>
+  <div class="nav-logo">Greece Trip 2026</div>
   <ul class="nav-links">
     <li><a href="#map-section">Map</a></li>
     <li><a href="#weather">Weather</a></li>
@@ -837,7 +837,7 @@
   </div>
 </section>
 
-<footer>ΕΛΛΆΔΑ 2026 &nbsp;·&nbsp; Amsterdam → Athens → Meteora → Thermopylae Hot Springs → Delphi → Nafplio → Sounion → Home</footer>
+<footer>Greece Trip 2026 &nbsp;·&nbsp; Amsterdam → Athens → Meteora → Thermopylae Hot Springs → Delphi → Nafplio → Sounion → Home</footer>
 
 <script>
 // ═══════════════════════════════════════════
